@@ -1,20 +1,21 @@
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class App {
     public static void main(String[] args) {
         // Crear instancia de TablaDatos y definir etiquetas de columnas
         TablaDatos tablaDatos = new TablaDatos();
-        List<String> etiquetasColumnas = List.of("ID", "Nombre del Producto", "Estado");
+        List<String> etiquetasColumnas = Arrays.asList("ID", "Nombre del Producto", "Estado");
         tablaDatos.setEtiquetasColumnas(etiquetasColumnas);
 
         // Agregar filas iniciales de productos
-        tablaDatos.insertarFila(List.of("1", "Libro de Java", "En Stock"));
-        tablaDatos.insertarFila(List.of("2", "Manual de Python", "Vendido"));
-        tablaDatos.insertarFila(List.of("3", "Guía de SQL", "En Stock"));
-        tablaDatos.insertarFila(List.of("4", "Diccionario de Inglés", "Agotado"));
-        tablaDatos.insertarFila(List.of("5", "Diccionario de Frances", "Vendido"));
+        tablaDatos.insertarFila(Arrays.asList("1", "Libro de Java", "En Stock"));
+        tablaDatos.insertarFila(Arrays.asList("2", "Manual de Python", "Vendido"));
+        tablaDatos.insertarFila(Arrays.asList("3", "Guía de SQL", "En Stock"));
+        tablaDatos.insertarFila(Arrays.asList("4", "Diccionario de Inglés", "Agotado"));
+        tablaDatos.insertarFila(Arrays.asList("5", "Diccionario de Frances", "Vendido"));
 
         // Mostrar la tabla de productos en consola
         System.out.println("Tabla de productos inicial:");
@@ -36,16 +37,13 @@ public class App {
         List<Fila> filasFiltradas = filtro.filtrar();
         mostrarFilas(filasFiltradas);
 
-
         // Ordenar productos por "Nombre del Producto" (usando OrdenadorFilas)
         System.out.println("\nOrdenando productos por 'Nombre del Producto'...");
-       // Creación del objeto OrdenadorFilas con los tres parámetros necesarios
         OrdenadorFilas ordenador = new OrdenadorFilas("Nombre del Producto", true, tablaDatos);
 
         // Uso del objeto ordenador para ordenar las filas
         List<Fila> filasOrdenadas = ordenador.ordenar(tablaDatos.getFilas());
         mostrarFilas(filasOrdenadas);
-
 
         // Exportar la tabla a un archivo CSV (usando BibliotecaCSV)
         String nombreArchivo = "inventario.csv";
@@ -65,7 +63,7 @@ public class App {
     // Método auxiliar para mostrar la tabla en consola
     private static void mostrarTabla(TablaDatos tabla) {
         System.out.println(String.join(" | ", tabla.getEtiquetasColumnas()));
-        System.out.println("-".repeat(50));
+        System.out.println(repetirCaracter('-', 50));
         mostrarFilas(tabla.getFilas());
     }
 
@@ -79,5 +77,13 @@ public class App {
             System.out.println(String.join(" | ", valores));
         }
     }
-}
 
+    // Método auxiliar para repetir un carácter
+    private static String repetirCaracter(char caracter, int cantidad) {
+        StringBuilder sb = new StringBuilder(cantidad);
+        for (int i = 0; i < cantidad; i++) {
+            sb.append(caracter);
+        }
+        return sb.toString();
+    }
+}
